# Bot

./: README.md
Collecting-text-message/: TEP team_general.csv  TEP team_subgroup.csv  TEP team_test3.csv  keep_alive.py  main.py  pyproject.toml  realText.py  test3.csv  unit-2-python-programming.csv  unit-4-workshop-interview.csv
Collecting-text-message/example_BotDataScape/: unit-1-math.csv  unit-3-language.csv
Collecting-text-message/python/: main.py  realText.py
