[tool.poetry]
name = "repl_python3_CourteousDiscreteAdware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
discord = "^1.0.1"
pandas = "^1.2.4"
db = "^0.1.1"
flask = "^2.0.0"
replit = "^3.1.0"
apscheduler = "^3.7.0"
discord-db = "^0.1.0"
wordcloud = "^1.8.1"
pymongo = "^3.11.4"
profanity-check = "^1.0.3"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
